deploy/mesh/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    # works because deploy/operators/instances creates an IstioRevisionTag
    # named `default`
    istio-injection: enabled
